--- a/kotlin-multiplatform/app/src/main/res/layout/activity_main.xml
+++ b/kotlin-multiplatform/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,10 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/main_text"
-        android:textSize="42sp"
-        android:layout_margin="5sp"
-        android:textAlignment="center"
+        android:id="@+id/timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
